[fix #3320] Unsquish product icons part 2. (#3331)
- Unsquishes on /questions/new for desktop & mobile

--- a/kitsune/sumo/static/sumo/less/mobile/includes/product-switcher.less
+++ b/kitsune/sumo/static/sumo/less/mobile/includes/product-switcher.less
@@ -26,15 +26,17 @@
           content: '';
           height: 48px;
           left: 50%;
-          margin-left: -24px;
+          margin-left: -35px;
           position: absolute;
           top: 10px;
-          width: 48px;
+          width: 70px;
         }
       }
 
       .logo {
-          background-size: 48px 48px;
+          background-position: center center;
+          background-repeat: no-repeat;
+          background-size: 70px auto;
       }
 
       &.selected {
