--- a/kitsune/sumo/static/sumo/less/questions.less
+++ b/kitsune/sumo/static/sumo/less/questions.less
@@ -1196,7 +1196,9 @@ h2 {
 
       > img {
         float: left;
+        height: auto;
         margin: 8px 15px 8px 0;
+        width: 100px;
       }
 
       > span {
@@ -1214,7 +1216,7 @@ h2 {
 
         &.description {
           display: block;
-          margin: 0 0 0 99px;
+          margin: 0 0 0 115px;
         }
       }
     }
